kubernetes/propeller-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: propeller-deployment
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
       —name: propeller-test
          image: europe-west1-docker.pkg.dev/propeller-385509/propeller-images/propeller-test:latest
          ports:
           —containerPort: 3000
