kubernetes/propeller-ingress-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: propeller-ingress
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: propeller-ingress
