kubernetes/propeller-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: propeller-ingress
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          service:
            name: propeller-ingress-service
            port:
              number: 80
